--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionDetailCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionDetailCell.xib
@@ -13,29 +13,29 @@
         <array key="SF-Pro-Display-RegularItalic.otf">
             <string>SFProDisplay-Italic</string>
         </array>
-        <array key="SFProText-Medium.ttf">
-            <string>SFProText-Medium</string>
+        <array key="SFProText-Semibold.otf">
+            <string>SFProText-Semibold</string>
         </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="JSp-cb-YXw" customClass="UTXODetailCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="JSp-cb-YXw" customClass="TransactionDetailCell" customModule="BeamWallet" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="170"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JSp-cb-YXw" id="nlU-c7-klL">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="119.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="169.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yio-1z-dxj">
-                        <rect key="frame" x="15" y="15" width="290" height="89.5"/>
+                        <rect key="frame" x="15" y="45" width="290" height="109"/>
                         <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GIP-fu-pjn">
-                                <rect key="frame" x="110.5" y="20" width="69.5" height="24"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GIP-fu-pjn">
+                                <rect key="frame" x="110.5" y="40" width="69.5" height="24"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="10.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ubL-pw-5FK">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ubL-pw-5FK">
                                         <rect key="frame" x="0.0" y="0.0" width="50.5" height="24"/>
-                                        <fontDescription key="fontDescription" name="SFProText-Medium" family="SF Pro Text" pointSize="20"/>
+                                        <fontDescription key="fontDescription" name="SFProText-Semibold" family="SF Pro Text" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                         <userDefinedRuntimeAttributes>
@@ -60,8 +60,8 @@
                                     <constraint firstItem="ubL-pw-5FK" firstAttribute="leading" secondItem="GIP-fu-pjn" secondAttribute="leading" id="kg7-UQ-Z21"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" ambiguous="YES" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-WT-fzr">
-                                <rect key="frame" x="125" y="49" width="40.5" height="19.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="spent" textAlignment="right" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BoK-WT-fzr">
+                                <rect key="frame" x="125" y="69" width="40.5" height="19"/>
                                 <fontDescription key="fontDescription" name="SFProDisplay-Italic" family="SF Pro Display" pointSize="16"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -69,14 +69,23 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.55000000000000004" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icEyeCrossedBig" translatesAutoresizingMaskIntoConstraints="NO" id="lCf-d5-5pB">
+                                <rect key="frame" x="115" y="37" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="U7r-1i-J0i"/>
+                                    <constraint firstAttribute="width" constant="60" id="czs-rF-ave"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.10980392160000001" green="0.26274509800000001" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="BoK-WT-fzr" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="Ew2-bG-7d7"/>
+                            <constraint firstItem="lCf-d5-5pB" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="MMk-Cc-D31"/>
+                            <constraint firstItem="lCf-d5-5pB" firstAttribute="top" secondItem="yio-1z-dxj" secondAttribute="top" constant="37" id="Pvd-RO-iHs"/>
                             <constraint firstItem="GIP-fu-pjn" firstAttribute="centerX" secondItem="yio-1z-dxj" secondAttribute="centerX" id="b00-e9-zMp"/>
-                            <constraint firstItem="GIP-fu-pjn" firstAttribute="top" secondItem="yio-1z-dxj" secondAttribute="top" constant="20" id="iMN-oa-xJa"/>
+                            <constraint firstAttribute="bottom" secondItem="BoK-WT-fzr" secondAttribute="bottom" constant="21" id="dRn-2e-KIO"/>
+                            <constraint firstItem="GIP-fu-pjn" firstAttribute="top" secondItem="yio-1z-dxj" secondAttribute="top" constant="40" id="iMN-oa-xJa"/>
                             <constraint firstItem="BoK-WT-fzr" firstAttribute="top" secondItem="GIP-fu-pjn" secondAttribute="bottom" constant="5" id="noi-Ay-Rqg"/>
-                            <constraint firstAttribute="bottom" secondItem="BoK-WT-fzr" secondAttribute="bottom" constant="21" id="rKn-Ea-yws"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -84,12 +93,40 @@
                             </userDefinedRuntimeAttribute>
                         </userDefinedRuntimeAttributes>
                     </view>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wUI-ZL-prr">
+                        <rect key="frame" x="137" y="21" width="46" height="46"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon-received" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Qs-rn-M2r">
+                                <rect key="frame" x="15" y="15" width="16" height="16"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="8Qs-rn-M2r" firstAttribute="centerX" secondItem="wUI-ZL-prr" secondAttribute="centerX" id="Ni7-1L-jN5"/>
+                            <constraint firstAttribute="height" constant="46" id="PLA-04-d69"/>
+                            <constraint firstAttribute="width" constant="46" id="d9W-mI-iCc"/>
+                            <constraint firstItem="8Qs-rn-M2r" firstAttribute="centerY" secondItem="wUI-ZL-prr" secondAttribute="centerY" id="zN0-hv-oPt"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="23"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.043137254899999998" green="0.80000000000000004" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
+                    <constraint firstItem="yio-1z-dxj" firstAttribute="top" secondItem="nlU-c7-klL" secondAttribute="top" constant="45" id="3YY-7o-si3"/>
+                    <constraint firstItem="wUI-ZL-prr" firstAttribute="top" secondItem="nlU-c7-klL" secondAttribute="topMargin" constant="10" id="Hh2-Nw-6Iw"/>
+                    <constraint firstAttribute="bottom" secondItem="yio-1z-dxj" secondAttribute="bottom" constant="15.5" id="Qhn-mk-Ky8"/>
                     <constraint firstAttribute="trailing" secondItem="yio-1z-dxj" secondAttribute="trailing" constant="15" id="btp-rN-Odx"/>
-                    <constraint firstAttribute="bottom" secondItem="yio-1z-dxj" secondAttribute="bottom" constant="15" id="dcs-fm-Kgj"/>
-                    <constraint firstItem="yio-1z-dxj" firstAttribute="top" secondItem="nlU-c7-klL" secondAttribute="top" constant="15" id="jKe-D6-tyq"/>
+                    <constraint firstItem="wUI-ZL-prr" firstAttribute="centerX" secondItem="nlU-c7-klL" secondAttribute="centerX" id="sje-n7-zeN"/>
                     <constraint firstItem="yio-1z-dxj" firstAttribute="leading" secondItem="nlU-c7-klL" secondAttribute="leading" constant="15" id="ux3-pD-9KH"/>
                 </constraints>
             </tableViewCellContentView>
@@ -97,14 +134,19 @@
             <viewLayoutGuide key="safeArea" id="7nM-t7-gc3"/>
             <connections>
                 <outlet property="amountLabel" destination="ubL-pw-5FK" id="VNz-OM-EO5"/>
+                <outlet property="arrowIcon" destination="8Qs-rn-M2r" id="Pak-j9-mVT"/>
+                <outlet property="circleView" destination="wUI-ZL-prr" id="pAK-SC-oxZ"/>
                 <outlet property="currencyIcon" destination="5av-9X-tme" id="8hZ-5c-jVt"/>
                 <outlet property="mainView" destination="yio-1z-dxj" id="vBc-vf-TcL"/>
+                <outlet property="securityIcon" destination="lCf-d5-5pB" id="4ln-pv-CyP"/>
                 <outlet property="statusLabel" destination="BoK-WT-fzr" id="umw-CO-HUV"/>
             </connections>
             <point key="canvasLocation" x="52.799999999999997" y="87.706146926536732"/>
         </tableViewCell>
     </objects>
     <resources>
+        <image name="icEyeCrossedBig" width="60" height="61"/>
+        <image name="icon-received" width="22" height="22"/>
         <image name="iconSymbol" width="16" height="24.5"/>
     </resources>
 </document>
