--- a/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionPaymentProofCell.xib
+++ b/BeamWallet/ViewControllers/Main/Wallet/Transaction/Cell/TransactionPaymentProofCell.xib
@@ -18,14 +18,26 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="gZy-mm-Kaq" customClass="TransactionPaymentProofCell" customModule="BeamWallet" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="112"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gZy-mm-Kaq" id="om8-cu-19W">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="111.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="PAYMENT PROOF" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKB-jR-46e">
+                        <rect key="frame" x="15" y="15" width="290" height="17"/>
+                        <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                        <color key="textColor" red="0.55294117649999996" green="0.63137254899999995" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <nil key="highlightedColor"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustFontSize" value="YES"/>
+                            <userDefinedRuntimeAttribute type="number" keyPath="letterSpacing">
+                                <real key="value" value="1.5"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </label>
                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="gSV-pm-dO6">
-                        <rect key="frame" x="15" y="15" width="290" height="44"/>
+                        <rect key="frame" x="15" y="52" width="290" height="44"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l9c-tb-5RU" customClass="BMButton" customModule="BeamWallet" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="140" height="44"/>
@@ -33,7 +45,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="h5N-ih-1Pk"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                 <state key="normal" title="details" image="iconEyeWhite">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -55,7 +67,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="fxg-bd-JDr"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SFProDisplay-Bold" family="SF Pro Display" pointSize="16"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="20" maxY="0.0"/>
                                 <state key="normal" title="copy" image="iconCopyWhite">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -75,9 +87,12 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="gSV-pm-dO6" secondAttribute="bottom" constant="15" id="0yr-lz-Nn2"/>
-                    <constraint firstItem="gSV-pm-dO6" firstAttribute="top" secondItem="om8-cu-19W" secondAttribute="top" constant="15" id="iWe-KP-2x6"/>
+                    <constraint firstAttribute="bottom" secondItem="gSV-pm-dO6" secondAttribute="bottom" constant="15.5" id="CLg-W6-aDN"/>
+                    <constraint firstItem="gSV-pm-dO6" firstAttribute="top" secondItem="sKB-jR-46e" secondAttribute="bottom" constant="20" id="FgZ-EW-9bL"/>
+                    <constraint firstItem="sKB-jR-46e" firstAttribute="top" secondItem="om8-cu-19W" secondAttribute="top" constant="15" id="JHg-Q8-z7D"/>
+                    <constraint firstItem="sKB-jR-46e" firstAttribute="leading" secondItem="om8-cu-19W" secondAttribute="leading" constant="15" id="e5g-ID-Fcn"/>
                     <constraint firstItem="gSV-pm-dO6" firstAttribute="leading" secondItem="om8-cu-19W" secondAttribute="leading" constant="15" id="t0F-64-9eI"/>
+                    <constraint firstAttribute="trailing" secondItem="sKB-jR-46e" secondAttribute="trailing" constant="15" id="uJ9-5C-v5v"/>
                     <constraint firstAttribute="trailing" secondItem="gSV-pm-dO6" secondAttribute="trailing" constant="15" id="wB4-hQ-lJY"/>
                 </constraints>
             </tableViewCellContentView>
@@ -86,6 +101,7 @@
             <connections>
                 <outlet property="buttonCopy" destination="OfF-Pv-YjD" id="TJv-Dw-i9W"/>
                 <outlet property="buttonDetails" destination="l9c-tb-5RU" id="IuE-DH-a23"/>
+                <outlet property="titleLabel" destination="sKB-jR-46e" id="8Ja-26-s0K"/>
             </connections>
             <point key="canvasLocation" x="-51.200000000000003" y="111.54422788605699"/>
         </tableViewCell>
